# C-

./: .gitignore  CMakeLists.txt  README.md  STEP_BY_STEP_GUIDE.md  c++.cpp  game.js  game.wasm  index.html  instant-play.html
src/: main.cpp
src/engine/: camera.cpp  camera.h  game.cpp  game.h  input.cpp  input.h  window.cpp  window.h
src/entity/: enemy.cpp  enemy.h  player.cpp  player.h  projectile.cpp  projectile.h
src/graphics/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/physics/: physics.cpp  physics.h
src/world/: world.cpp  world.h
